--- a/tesis.lyx
+++ b/tesis.lyx
@@ -25,18 +25,18 @@
 \usepackage{tikzscale} % scale tikz
 
 \let\oldhat\hat
-\renewcommand{\vec}[1]{\mathbf{#1}}
-\renewcommand{\hat}[1]{\oldhat{\mathbf{#1}}}
+%\renewcommand{\vec}[1]{\mathbf{#1}}
+%\renewcommand{\hat}[1]{\oldhat{\mathbf{#1}}}
 
-\newcommand{\abs}[1]{\lvert#1\rvert}
-\newcommand{\norm}[1]{\lVert#1\rVert}
+%\newcommand{\abs}[1]{\lvert#1\rvert}
+%\newcommand{\norm}[1]{\lVert#1\rVert}
 
 % scaled operators and letters
-\newcommand{\sminus}{\scalebox{0.5}[1.0]{$-$}}
-\newcommand{\splus}{\scalebox{0.7}[0.7]{$+$}}
-\newcommand{\curr}{\scalebox{0.5}[0.5]{$\mathcal{C}$}}
-\newcommand{\sind}[1]{\scalebox{0.6}[0.6]{$#1$}}
-\newcommand{\ind}[1]{\scalebox{0.7}[0.7]{$#1$}}
+%\newcommand{\sminus}{\scalebox{0.5}[1.0]{$-$}}
+%\newcommand{\splus}{\scalebox{0.7}[0.7]{$+$}}
+%\newcommand{\curr}{\scalebox{0.5}[0.5]{$\mathcal{C}$}}
+%\newcommand{\sind}[1]{\scalebox{0.6}[0.6]{$#1$}}
+%\newcommand{\ind}[1]{\scalebox{0.7}[0.7]{$#1$}}
 
 \captionsetup{font=small,format=hang}
 
@@ -46,6 +46,8 @@
 \def\tablename{Tabla}
 \def\listtablename{\'Indice de tablas}
 }
+
+\input{math_preamble}
 \end_preamble
 \options ruled,vlined
 \use_default_options true
