--- a/experimentacion.lyx
+++ b/experimentacion.lyx
@@ -231,7 +231,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename /BACKUP/tesina/tesina_ariel_dalessandro/imagenes/kitti_sensors.jpg
+	filename imagenes/kitti_sensors.jpg
 	lyxscale 50
 	width 100text%
 
@@ -275,7 +275,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename /BACKUP/tesina/tesina_ariel_dalessandro/imagenes/kitti01.png
+	filename imagenes/kitti01.png
 	lyxscale 50
 	width 49text%
 
@@ -287,7 +287,7 @@ status open
 
 
 \begin_inset Graphics
-	filename /BACKUP/tesina/tesina_ariel_dalessandro/imagenes/kitti02.png
+	filename imagenes/kitti02.png
 	lyxscale 50
 	width 49text%
 
@@ -299,7 +299,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename /BACKUP/tesina/tesina_ariel_dalessandro/imagenes/kitti03.png
+	filename imagenes/kitti03.png
 	lyxscale 50
 	width 49col%
 
@@ -311,7 +311,7 @@ status open
 
 
 \begin_inset Graphics
-	filename /BACKUP/tesina/tesina_ariel_dalessandro/imagenes/kitti04.png
+	filename imagenes/kitti04.png
 	lyxscale 50
 	width 49col%
 
@@ -323,7 +323,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename /BACKUP/tesina/tesina_ariel_dalessandro/imagenes/kitti05.png
+	filename imagenes/kitti05.png
 	lyxscale 50
 	width 49col%
 
@@ -335,7 +335,7 @@ status open
 
 
 \begin_inset Graphics
-	filename /BACKUP/tesina/tesina_ariel_dalessandro/imagenes/kitti06.png
+	filename imagenes/kitti06.png
 	lyxscale 50
 	width 49col%
 
